--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "mongoose-field-encryption": "^7.0.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.3"
   }
 }
